--- a/index.html
+++ b/index.html
@@ -1,8 +1,57 @@
+
+<!DOCTYPE HTML>
+<!--
+SUP!
+-->
 <html>
-<head>
-<title>Hello World</title>
-</head>
-<body>
-Hello, world!
-</body>
+	<head>
+		<title>Brydon Eastman</title>
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+		<meta name="description" content="Brydon Eastman, Mathematician &amp; Computer Programmer from Hamilton, Ontario. I like hiking, cycling, camping, scuba diving, and interesting maths.">
+		<meta name="keywords" content="math, programming, web design, developer, Brydon, Eastman, Brydon Eastman, beastman, hamont, Hamilton">
+		<meta name="author" content="Brydon Eastman">
+		<link rel="shortcut icon" href="icon.jpg">
+		<!--[if lte IE 8]>
+            <script src="css/ie/html5shiv.js"></script>
+        <![endif]-->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+		<script src="js/skel.min.js"></script>
+		<script src="js/init.js"></script>
+		<noscript>
+			<link rel="stylesheet" href="css/skel.css" />
+			<link rel="stylesheet" href="css/style.css" />
+			<link rel="stylesheet" href="css/style-wide.css" />
+			<link rel="stylesheet" href="css/style-noscript.css" />
+		</noscript>
+		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+	</head>
+	<body class="loading">
+		<div id="wrapper">
+			<div id="bg"></div>
+			<div id="overlay"></div>
+			<div id="main">
+				<!-- Header -->
+				<header id="header">
+				<img id="headerImg" src="images/me.png" alt="Picture of Brydon" title="Hey, that's me!" />
+					<h1>Brydon Eastman</h1>
+					<p>Graduate Mathematics Student &amp; Programmer living in <span class="hashtag"><a target="_blank" href="http://www.twitter.com/hashtag/hamont" title="Hamilton, Ontario">&#35;hamont</a></span></p>
+					<nav>
+					<h3></h3>
+						<ul>
+							<li><a href="#" target="_blank" title="Blog" class="fa fa-pencil-square"><span class="label">Blog</span></a></li>
+							<li><a href="https://www.researchgate.net/profile/Brydon_Eastman/contributions?sorting=recentlyAdded" target="_blank" title="Recent Publications" class="fa fa-university"><span class="label">Recent Papers</span></a></li>
+							<li><a href="mailto:eastmab@math.mcmaster.ca" target="_blank" title="Contact" class="fa fa-envelope"><span class="label">contact</span></a></li>
+							<!--<li><a href="#" target="_blank" title="ResearchGate" class="icon researchGate"><span class="label">ResearchGate</span></a></li>-->
+							<li><a href="https://github.com/brydon" target="_blank" title="GitHub" class="fa fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/brydon-eastman-396719a4" target="_blank" title="LinkedIn" class="fa fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
+						</ul>
+					</nav>
+				</header>
+				<!-- Footer -->
+				<footer id="footer">						
+				</footer>
+			</div>
+		</div>
+	</body>
 </html>
