Redoing Math1MP

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ SUP!
 					<nav>
 					<h3></h3>
 						<ul>
-							<li><a href="#" target="_blank" title="Blog" class="fa fa-pencil-square"><span class="label">Blog</span></a></li>
+							<li><a href="math1mp/" target="_self" title="Math 1MP3" class="fa fa-pencil-square"><span class="label">Blog</span></a></li>
 							<li><a href="https://www.researchgate.net/profile/Brydon_Eastman/contributions?sorting=recentlyAdded" target="_blank" title="Recent Publications" class="fa fa-university"><span class="label">Recent Papers</span></a></li>
 							<li><a href="mailto:eastmab@math.mcmaster.ca" target="_blank" title="Contact" class="fa fa-envelope"><span class="label">contact</span></a></li>
 							<!--<li><a href="#" target="_blank" title="ResearchGate" class="icon researchGate"><span class="label">ResearchGate</span></a></li>-->
