Fixed tiny Typo

--- a/math1mp/index.html
+++ b/math1mp/index.html
@@ -26,7 +26,7 @@
         <h1 id="tutorial-2"><a href="#header-1"></a>Tutorial 2</h1>
 <h2 id="-week-of-jan-12-17-2017"><a href="#header-2"></a> (Week of Jan 12-17, 2017)</h2>
 
-<p>For this weeks tutorial we will be working through python exercises dealing with <em>assignment</em>, <em>strings</em>, <em>lists</em>, and <em>loops</em>.</p>
+<p>For this week’s tutorial we will be working through python exercises dealing with <em>assignment</em>, <em>strings</em>, <em>lists</em>, and <em>loops</em>.</p>
 
 <p>These exercises are varying difficulty – for instance 1,2, and 3 are /relatively/ easy. While 7 and 9 are <strong>hard</strong>.</p>
 
@@ -37,7 +37,7 @@
 <h1 id="tutorial-1"><a href="#header-1"></a>Tutorial 1</h1>
 <h2 id="-week-of-jan-5-11-2017"><a href="#header-2"></a> (Week of Jan 5-11, 2017)</h2>
 
-<p>For this weeks tutorial we will be installing <a href="http://continuum.io/downloads">Anaconda</a> and <a href="https://www.jetbrains.com/pycharm/download">PyCharm</a> and that’s it! Here’s the <a href="wk1slides.pdf">slides</a> for the week.</p>
+<p>For this week’s tutorial we will be installing <a href="http://continuum.io/downloads">Anaconda</a> and <a href="https://www.jetbrains.com/pycharm/download">PyCharm</a> and that’s it! Here’s the <a href="wk1slides.pdf">slides</a> for the week.</p>
 
 <p>For Anaconda make sure you select the Python 3.5 installer! If you’re on Mac choose the graphical installer, unless you like bash! Most computers will be 64 bit. If you want to check</p>
 <ul>
