--- a/math1mp/index.html
+++ b/math1mp/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Math 1MP3 by </title>
+    <title>Math 1MP3 Tutorials</title>
   </head>
 
   <body>
