--- a/math1mp/index.html
+++ b/math1mp/index.html
@@ -32,7 +32,7 @@
 
 <p>The tutorial pdf file can be found <a href="lab2.pdf">Here</a>.</p>
 
-<p>The solutions for this week will be posted the evening of <strong>Tuesday, January 17</strong>.</p>
+<p>The solutions can be found <a href="sols-tut2.py">Here</a>.</p>
 
 <h1 id="tutorial-1"><a href="#header-1"></a>Tutorial 1</h1>
 <h2 id="-week-of-jan-5-11-2017"><a href="#header-2"></a> (Week of Jan 5-11, 2017)</h2>
