--- a/math1mp/index.html
+++ b/math1mp/index.html
@@ -60,5 +60,15 @@
     </div>
 
     
+    <footer>
+      <div class="container">
+        <span id="left">
+        Find me in Hamilton Hall 402.
+        </span>
+        <span id="right">
+          <a href="http://github.com/pages-themes/hacker" class="btn btn-github"><span class="icon"></span>Hacker Jekyll Theme</a>
+        </span>
+      </div>
+    </footer>
   </body>
 </html>
