--- a/math1mp/index.html
+++ b/math1mp/index.html
@@ -23,7 +23,14 @@
 
     <div class="container">
       <section id="main_content">
-        <h1 id="tutorial-2"><a href="#header-1"></a>Tutorial 2</h1>
+        <h1 id="tutorial-3"><a href="#header-1"></a>Tutorial 3</h1>
+<h2 id="-week-of-jan-19-24-2017"><a href="#header-2"></a> (Week of Jan 19-24, 2017)</h2>
+
+<p>For this week’s tutorial we will be focusing on python exerises dealing with <em>loops</em> and <em>lists</em> – and often, how the two interact.</p>
+
+<p>The tutorial pdf file can be found <a href="lab3.pdf">here</a>, as with last week some questions are much harder than others (Question 5, for instance).</p>
+
+<h1 id="tutorial-2"><a href="#header-1"></a>Tutorial 2</h1>
 <h2 id="-week-of-jan-12-17-2017"><a href="#header-2"></a> (Week of Jan 12-17, 2017)</h2>
 
 <p>For this week’s tutorial we will be working through python exercises dealing with <em>assignment</em>, <em>strings</em>, <em>lists</em>, and <em>loops</em>.</p>
