--- a/math1mp/index.html
+++ b/math1mp/index.html
@@ -37,9 +37,9 @@
 
 <p>These exercises are varying difficulty – for instance 1,2, and 3 are /relatively/ easy. While 7 and 9 are <strong>hard</strong>.</p>
 
-<p>The tutorial pdf file can be found <a href="lab2.pdf">Here</a>.</p>
+<p>The tutorial pdf file can be found <a href="lab2.pdf">here</a>.</p>
 
-<p>The solutions can be found <a href="sols-tut2.py">Here</a>.</p>
+<p>The solutions can be found <a href="sols-tut2.py">here</a>.</p>
 
 <h1 id="tutorial-1"><a href="#header-1"></a>Tutorial 1</h1>
 <h2 id="-week-of-jan-5-11-2017"><a href="#header-2"></a> (Week of Jan 5-11, 2017)</h2>
