--- a/math1mp/index.html
+++ b/math1mp/index.html
@@ -23,7 +23,14 @@
 
     <div class="container">
       <section id="main_content">
-        <h1 id="tutorial-3"><a href="#header-1"></a>Tutorial 3</h1>
+        <h1 id="tutorial-4"><a href="#header-1"></a>Tutorial 4</h1>
+<h2 id="-week-of-jan-26-31-2017"><a href="#header-2"></a> (Week of Jan 26-31, 2017)</h2>
+
+<p>For this week’s tutorial we will be focusing on python exercises dealing with <em>functions</em> and <em>recursion</em>. Find the tutorial pdf <a href="lab4.pdf">here</a>.</p>
+
+<p>The solutions will be posted Tuesday the 31st in the evening.</p>
+
+<h1 id="tutorial-3"><a href="#header-1"></a>Tutorial 3</h1>
 <h2 id="-week-of-jan-19-24-2017"><a href="#header-2"></a> (Week of Jan 19-24, 2017)</h2>
 
 <p>For this week’s tutorial we will be focusing on python exerises dealing with <em>loops</em> and <em>lists</em> – and often, how the two interact.</p>
