--- a/math1mp/index.html
+++ b/math1mp/index.html
@@ -28,7 +28,7 @@
 
 <p>For this week’s tutorial we will be focusing on python exercises dealing with <em>functions</em> and <em>recursion</em>. Find the tutorial pdf <a href="lab4.pdf">here</a>.</p>
 
-<p>The solutions will be posted Tuesday the 31st in the evening.</p>
+<p>The solutions can be found <a href="sols-tut4.py">here</a>.</p>
 
 <h1 id="tutorial-3"><a href="#header-1"></a>Tutorial 3</h1>
 <h2 id="-week-of-jan-19-24-2017"><a href="#header-2"></a> (Week of Jan 19-24, 2017)</h2>
