--- a/math1mp/index.html
+++ b/math1mp/index.html
@@ -23,7 +23,12 @@
 
     <div class="container">
       <section id="main_content">
-        <h1 id="tutorial-4"><a href="#header-1"></a>Tutorial 4</h1>
+        <h1 id="tutorial-5"><a href="#header-1"></a>Tutorial 5</h1>
+<h2 id="-week-of-feb-2-7-2017"><a href="#header-2"></a> (Week of Feb 2-7, 2017)</h2>
+
+<p>For this week’s tutorial we look at some basic file i/o, some more function stuff, the dangers of floating point problems, and just some general python tricks. Find the tutorial pdf <a href="lab5.pdf">here</a>. Question 1 also requires use of <a href="lipsum.txt">lipsum.txt</a>.</p>
+
+<h1 id="tutorial-4"><a href="#header-1"></a>Tutorial 4</h1>
 <h2 id="-week-of-jan-26-31-2017"><a href="#header-2"></a> (Week of Jan 26-31, 2017)</h2>
 
 <p>For this week’s tutorial we will be focusing on python exercises dealing with <em>functions</em> and <em>recursion</em>. Find the tutorial pdf <a href="lab4.pdf">here</a>.</p>
