--- a/math1mp/index.html
+++ b/math1mp/index.html
@@ -23,7 +23,9 @@
 
     <div class="container">
       <section id="main_content">
-        <h1 id="tutorial-5"><a href="#header-1"></a>Tutorial 5</h1>
+        <p><em>With all these tutorial quesitons, don’t worry if you can’t do them all in the 50 minutes (usually less, because I make announcements too). Instead, focus on one or two that you think you mostly understand, and ask me questions until you fully understand. Some of these tutorial questions are really hard!</em></p>
+
+<h1 id="tutorial-5"><a href="#header-1"></a>Tutorial 5</h1>
 <h2 id="-week-of-feb-2-7-2017"><a href="#header-2"></a> (Week of Feb 2-7, 2017)</h2>
 
 <p>For this week’s tutorial we look at some basic file i/o, some more function stuff, the dangers of floating point problems, and just some general python tricks. Find the tutorial pdf <a href="lab5.pdf">here</a>. Question 1 also requires use of <a href="lipsum.txt">lipsum.txt</a>.</p>
