--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ SUP!
 -->
 <html>
 	<head>
-		<title>Brydon Eastman</title>
+		<title>Brydon Eastman 2017</title>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<meta name="description" content="Brydon Eastman, Mathematician &amp; Computer Programmer from Hamilton, Ontario. I like hiking, cycling, camping, scuba diving, and interesting maths.">
 		<meta name="keywords" content="math, programming, web design, developer, Brydon, Eastman, Brydon Eastman, beastman, hamont, Hamilton">
