--- a/math1mp/index.html
+++ b/math1mp/index.html
@@ -25,6 +25,9 @@
       <section id="main_content">
         <p><em>With all these tutorial quesitons, don’t worry if you can’t do them all in the 50 minutes (usually less, because I make announcements too). Instead, focus on one or two that you think you mostly understand, and ask me questions until you fully understand. Some of these tutorial questions are really hard!</em></p>
 
+<p>#<a href="#header-1"></a> Friday, February 16 tutorial is CANCELLED! 
+Have a nice reading break!!</p>
+
 <h1 id="tutorial-6"><a href="#header-1"></a>Tutorial 6</h1>
 <h2 id="-week-of-feb9-14-2017"><a href="#header-2"></a> (Week of Feb9-14, 2017)</h2>
 <p>For this tutorial, we will be working on dictionaries! Along the way we’ll do some loops, file I/O, if statements, and even some stuff with lists! Find the tutorial file <a href="lab6.pdf">here</a>.</p>
