--- a/math1mp/index.html
+++ b/math1mp/index.html
@@ -25,6 +25,16 @@
       <section id="main_content">
         <p><em>With all these tutorial quesitons, don’t worry if you can’t do them all in the 50 minutes (usually less, because I make announcements too). Instead, focus on one or two that you think you mostly understand, and ask me questions until you fully understand. Some of these tutorial questions are really hard!</em></p>
 
+<h1 id="tutorial-7"><a href="#header-1"></a>Tutorial 7</h1>
+<h2 id="-week-of-mar6-10-2017"><a href="#header-2"></a> (Week of Mar6-10, 2017)</h2>
+<p>The following tutorial goes over the basics of the numpy library, covering arrays in depth and all the little things you’ll want to do with them. Try running the code presented (with print statements as necessary) and answering all the little questions sprinkled throughout the file.</p>
+
+<p>The goal of this tutorial is to get you acquainted with all the many little tricks in numpy for manipulating arrays (beyond just base-python methods) and all the special functions for creating special arrays. That way you’ve at least once seen how to do it, so you have a resource to flip back to.</p>
+
+<p>At the end of the tutorial is one question (similar in size to previous tutorials) to test these concepts.</p>
+
+<p>Find the tutorial pdf <a href="lab7.pdf">here</a> you will also need <a href="lab7_data.txt">this text file</a>.</p>
+
 <h1 id="friday-february-16-tutorial-is-cancelled"><a href="#header-1"></a>Friday, February 16 tutorial is CANCELLED!</h1>
 <p>Have a nice reading break!!</p>
 
