Updated header with tut times

--- a/math1mp/index.html
+++ b/math1mp/index.html
@@ -13,6 +13,7 @@
       <div class="container">
         <h1>Math 1MP3</h1>
         <h2>Website for Brydon's Math 1MP3 tutorials!</h2>
+        <h5>Tu: 13:30-14:20 (BSB 249) Th: 10:30-11:20 (BSB 244) Fr: 14:30-15:20 (BSB 244)</h5>
 
         <section id="downloads">
           <a href="mailto:eastmab@math.mcmaster.ca" title="Email me!" class="btn">Email me!</a>
