--- a/math1mp/index.html
+++ b/math1mp/index.html
@@ -28,6 +28,11 @@
 
 <h1 id="tutorial-7"><a href="#header-1"></a>Tutorial 7</h1>
 <h2 id="-week-of-mar6-10-2017"><a href="#header-2"></a> (Week of Mar6-10, 2017)</h2>
+
+<p>Find the tutorial pdf <a href="lab8.pdf">here</a>.</p>
+
+<h1 id="tutorial-7-1"><a href="#header-1"></a>Tutorial 7</h1>
+<h2 id="-week-of-mar6-10-2017-1"><a href="#header-2"></a> (Week of Mar6-10, 2017)</h2>
 <p>The following tutorial goes over the basics of the numpy library, covering arrays in depth and all the little things you’ll want to do with them. Try running the code presented (with print statements as necessary) and answering all the little questions sprinkled throughout the file.</p>
 
 <p>The goal of this tutorial is to get you acquainted with all the many little tricks in numpy for manipulating arrays (beyond just base-python methods) and all the special functions for creating special arrays. That way you’ve at least once seen how to do it, so you have a resource to flip back to.</p>
