--- a/math1mp/index.html
+++ b/math1mp/index.html
@@ -26,10 +26,18 @@
       <section id="main_content">
         <p><em>With all these tutorial quesitons, don’t worry if you can’t do them all in the 50 minutes (usually less, because I make announcements too). Instead, focus on one or two that you think you mostly understand, and ask me questions until you fully understand. Some of these tutorial questions are really hard!</em></p>
 
+<h1 id="friday-march-24th-tutorial-is-cancelled"><a href="#header-1"></a>Friday, March 24th tutorial is CANCELLED!</h1>
+<p>Have a nice reading weekend!</p>
+
+<h1 id="tutorial-9"><a href="#header-1"></a>Tutorial 9</h1>
+<h2 id="-week-of-mar23-28-2017"><a href="#header-2"></a> (Week of Mar23-28, 2017)</h2>
+
+<p>Today’s tutorial covers pandas and dataframes. Find the tutorial pdf <a href="lab9.pdf">here</a>.</p>
+
 <h1 id="tutorial-8"><a href="#header-1"></a>Tutorial 8</h1>
 <h2 id="-week-of-mar16-21-2017"><a href="#header-2"></a> (Week of Mar16-21, 2017)</h2>
 
-<p>Find the tutorial pdf <a href="lab8.pdf">here</a>. The solutions will be posted Tuesday evening.</p>
+<p>This tutorial covers matplotilb and making plots with numpy. Find the tutorial pdf <a href="lab8.pdf">here</a>. The solutions will be posted soon!.</p>
 
 <h1 id="tutorial-7"><a href="#header-1"></a>Tutorial 7</h1>
 <h2 id="-week-of-mar6-10-2017"><a href="#header-2"></a> (Week of Mar6-10, 2017)</h2>
