Lol, hopefully last 1mp3 update

--- a/math1mp/index.html
+++ b/math1mp/index.html
@@ -27,10 +27,10 @@
         <p><em>With all these tutorial quesitons, don’t worry if you can’t do them all in the 50 minutes (usually less, because I make announcements too). Instead, focus on one or two that you think you mostly understand, and ask me questions until you fully understand. Some of these tutorial questions are really hard!</em></p>
 
 <h1 id="last-week-of-class"><a href="#header-1"></a>Last Week of Class</h1>
-<p>We will be covering some general course review in tutorial this week. Come with Final Project questions too! On Thursday, April 6 there will be a more focused final exam review session held in BSB 244 at 10:30. <em>All ar welcome!</em>.</p>
+<p>We will be covering some general course review in tutorial this week. Come with Final Project questions too! On Thursday, April 6 there will be a more focused final exam review session held in BSB 244 at 10:30. <em>All are welcome!</em>.</p>
 
 <h1 id="friday-march-24th-tutorial-is-cancelled"><a href="#header-1"></a>Friday, March 24th tutorial is CANCELLED!</h1>
-<p>Have a nice reading weekend!</p>
+<p>Have a nice weekend!</p>
 
 <h1 id="tutorial-9"><a href="#header-1"></a>Tutorial 9</h1>
 <h2 id="-week-of-mar23-28-2017"><a href="#header-2"></a> (Week of Mar23-28, 2017)</h2>
