New pic and email

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ SUP!
 						<ul>
 							<li><a href="math1mp/" target="_self" title="Math 1MP3" class="fa fa-pencil-square"><span class="label">Blog</span></a></li>
 							<li><a href="https://www.researchgate.net/profile/Brydon_Eastman/contributions?sorting=recentlyAdded" target="_blank" title="Recent Publications" class="fa fa-university"><span class="label">Recent Papers</span></a></li>
-							<li><a href="mailto:eastmab@math.mcmaster.ca" target="_blank" title="Contact" class="fa fa-envelope"><span class="label">contact</span></a></li>
+							<li><a href="mailto:b2eastma@uwaterloo.ca" target="_blank" title="Contact" class="fa fa-envelope"><span class="label">contact</span></a></li>
 							<!--<li><a href="#" target="_blank" title="ResearchGate" class="icon researchGate"><span class="label">ResearchGate</span></a></li>-->
 							<li><a href="https://github.com/brydon" target="_blank" title="GitHub" class="fa fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://www.linkedin.com/in/brydon-eastman-396719a4" target="_blank" title="LinkedIn" class="fa fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
