--- a/newsite/index.html
+++ b/newsite/index.html
@@ -11,26 +11,31 @@
     <body>
         <div id="header">
         </div>
+        <div id="bigbar" class="wrapper">
+            <a href="index.html" title"Home">Home</a> // <a href="teaching.html" title"Home">Teaching</a> // <a href="tutorial.html" title"Home">Tutorial</a> // <a href="research.html" title"Home">Research</a> // <a href="about.html" title"Home">About</a>
+        </div>
         <div id="ontop">
-            <div id="about">
+            <div id="about" class="wrapper">
                 <img src="images/me.png">
                 <h1>Brydon Eastman</h1>
                 <p>Ph.D. Candidate</p>
+                <p>Department of Applied Math</p>
                 <p>University of Waterloo</p>
             </div>
+        </div>
 
             <div id="smnav">
+                <nav>
                 <ul>
     				<li><a href="https://www.researchgate.net/profile/Brydon_Eastman/contributions?sorting=recentlyAdded" target="_blank" title="Recent Publications" class="fa fa-university"><span class="label">Recent Papers</span></a></li>
 					<li><a href="mailto:b2eastma@uwaterloo.ca" target="_blank" title="Contact" class="fa fa-envelope"><span class="label">contact</span></a></li>
 					<!--<li><a href="#" target="_blank" title="ResearchGate" class="icon researchGate"><span class="label">ResearchGate</span></a></li>-->
 					<li><a href="https://github.com/brydon" target="_blank" title="GitHub" class="fa fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="https://www.linkedin.com/in/brydon-eastman-396719a4" target="_blank" title="LinkedIn" class="fa fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
-				</ul>
+				</ul></nav>
             </div>
-        </div>
 
-        <div class="wrapper">
+        <div class="wrapper main">
             <div class="container content">
                 <hr />
                 <h2>About Me</h2>
@@ -53,11 +58,11 @@
                 <p>Aliquam erat volutpat. Sed est dui, pellentesque at eleifend at, placerat vitae purus. Ut pulvinar, lacus ut maximus accumsan, erat dolor luctus dolor, ac dapibus lacus felis facilisis nibh. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nunc at sagittis arcu. Nulla cursus est nec felis sollicitudin, quis tempor urna condimentum. Nullam euismod purus ac magna malesuada, quis tincidunt dui fermentum. Nullam efficitur egestas nisi, sit amet consequat nunc suscipit quis. Nam quam elit, vestibulum ullamcorper rutrum in, fringilla non enim. Nunc nec tincidunt nisi. Mauris ullamcorper lectus in arcu mollis laoreet.</p>
 
             </div>
-        </div>
 
-        <div id="footer">
-            <hr />
-            <p>&copy;2018 Brydon Eastman</p>
+            <div id="footer">
+                <hr />
+                <p>&copy;2018 Brydon Eastman</p>
+            </div>
         </div>
 
     </body>
