--- a/newsite/index.html
+++ b/newsite/index.html
@@ -11,9 +11,7 @@
     <body>
         <div id="header">
         </div>
-        <div id="bigbar" class="wrapper">
-            <a href="index.html" title"Home">Home</a> // <a href="teaching.html" title"Home">Teaching</a> // <a href="tutorial.html" title"Home">Tutorial</a> // <a href="research.html" title"Home">Research</a> // <a href="about.html" title"Home">About</a>
-        </div>
+
         <div id="ontop">
             <div id="about" class="wrapper">
                 <img src="images/me.png">
@@ -27,6 +25,11 @@
             <div id="smnav">
                 <nav>
                 <ul>
+                    <li><a class="text" href="index.html" title="Home">Home</a> /</li>
+                    <li><a class="text" href="tutorial.html" title="Tutorial">Tutorial</a> /</li>
+                    <li><a class="text" href="teaching.html" title="Teaching">Teaching</a> /</li>
+                    <li><a class="text" href="research.html" title="Research">Research</a> /</li>
+                    <li><a class="text" href="about.html" title="About">About</a></li>
     				<li><a href="https://www.researchgate.net/profile/Brydon_Eastman/contributions?sorting=recentlyAdded" target="_blank" title="Recent Publications" class="fa fa-university"><span class="label">Recent Papers</span></a></li>
 					<li><a href="mailto:b2eastma@uwaterloo.ca" target="_blank" title="Contact" class="fa fa-envelope"><span class="label">contact</span></a></li>
 					<!--<li><a href="#" target="_blank" title="ResearchGate" class="icon researchGate"><span class="label">ResearchGate</span></a></li>-->
