--- a/newsite/blog.html
+++ b/newsite/blog.html
@@ -41,11 +41,11 @@
 
         <div class="wrapper main">
             <div class="container content">
+                <h2>Blog</h2>
                 <hr />
-                <h2>Welcome</h2>
-                <p>This is the personal website of Brydon Eastman. I am an Applied Mathematician currently pursuing a Ph.D. at the University of Waterloo, previously having obtained an M.Sc. from McMaster University and B.Sc.(Hons) from Redeemer University.</p>
-                <p>Here you will find useful information about me, my research interests, teaching and tutorial resources, and random musings, both mathematical and otherwise, of mine in the blog.</p>
-                <p>Please contact me if you have any questions!</p>
+                <h2>November 23rd, 2018</h2>
+                <p>As this site first goes live, I make the first blog post! I hope to update this in time with musings of mathematics and computation too small to be considered papers or publications of their own right.</p>
+                
 
             </div>
 
