--- a/newsite/tutorial.html
+++ b/newsite/tutorial.html
@@ -26,6 +26,7 @@
                 <nav>
                 <ul>
                     <li><a class="text" href="index.html" title="Home">Home</a> /</li>
+                    <li><a class="text" href="blog.html" title="Blog">Blog</a> /</li>
                     <li><a class="text" href="tutorial.html" title="Tutorial">Tutorial</a> /</li>
                     <li><a class="text" href="teaching.html" title="Teaching">Teaching</a> /</li>
                     <li><a class="text" href="research.html" title="Research">Research</a> /</li>
