Updated research page

--- a/newsite/research.html
+++ b/newsite/research.html
@@ -42,22 +42,38 @@
         <div class="wrapper main">
             <div class="container content">
                 <h2>Research</h2>
+                <p>In this page I discuss my research <a href="#interests" title="Research Interest">interests</a>, <a href="#publications" title="Research Publications">publications</a>, and <a href="#presentations" title="Research Presentations">interests</a>. 
                 <hr />
-                <h2>Publications</h2>
+                <h2 name="interests">Research Interests</h2>
+                <p>My research interests are fundamentally linked by my long-time interest in computing and my desire to understand the world mathematically. As a result my research, even the pure mathematics research I have produced, has all been fundamentally linked to the marriage between mathematics and computing. Currently I am interested in how computation and mathematics can be used to understand biological problems, in particular I am interested in using the tools of Machine Learning and Mathematical Models (PDEs, ODEs, etc.) to answer questions of a biological nature.</p>
+
+                <h2 />
+                <h2 name="publications">Publications</h2>
                 <p>Below is a list of publications, listed from most recent to least recent. After each publication I try to give an "elevator-pitch" or "highlight reel" summary of the publication in both its context and results. This list was most-recently updated as of December 2018. </p>
                 
                 <hr />
 
-                <h2>Mutant Stem Cell Fixation</h2>
+                <h2>Mutant Stem Cell Fixation (Pre-print)</h2>
                 <p></p>
                 <h2>Masters Thesis</h2>
                 <p></p>
-                <h2>Pentadiagonal Companion Matrices</h2>
+                <h2>Pentadiagonal Companion Matrices (LAA)</h2>
                 <p></p>
-                <h2>Companion Matrices</h2>
+                <h2>Companion Matrices (LAA)</h2>
                 <p></p>
-                <h2>Spectrally Arbitrary Matrices</h2>
+                <h2>Spectrally Arbitrary Matrices (LAA)</h2>
                 <p></p>
+
+                <h2 name="presentations">Presentations</h2>
+                <p>Below is a list of presentations I have given on my research, listed from most recent to least recent. After each listing I try to summarize the context of the presentation in tweet-sized bites. This list was most-recently updated as of December 2018. </p>
+                <h2>Seminar at University of Waterloo</h2>
+                <h2>Redeemer's Mathematical Biology Course, April 2018</h2>
+                <h2>Redeemer Mathematics Panel, Fall 2016</h2>
+                <h2>University of Alberta - CUMC 2015</h2>
+                <h2>David Gregory Conference, June 2014</h2>
+                <h2>Carleton University - CUMC 2014</h2>
+                <h2>University of Montereal - CUMC 2013</h2>
+
             </div>
 
             <div id="footer">
