Changed fade times

--- a/newsite/research.html
+++ b/newsite/research.html
@@ -42,16 +42,14 @@
         <div class="wrapper main">
             <div class="container content">
                 <h2>Research</h2>
-                <p>In this page I discuss my research <a href="#interests" title="Research Interest">interests</a>, <a href="#publications" title="Research Publications">publications</a>, and <a href="#presentations" title="Research Presentations">interests</a>. 
+                <p>In this page I discuss my research <a href="#interests" title="Research Interest">interests</a>, <a href="#publications" title="Research Publications">publications</a>, and <a href="#presentations" title="Research Presentations">presentations</a>. 
                 <hr />
-                <h2 name="interests">Research Interests</h2>
+                <h2 id="interests">Research Interests</h2>
                 <p>My research interests are fundamentally linked by my long-time interest in computing and my desire to understand the world mathematically. As a result my research, even the pure mathematics research I have produced, has all been fundamentally linked to the marriage between mathematics and computing. Currently I am interested in how computation and mathematics can be used to understand biological problems, in particular I am interested in using the tools of Machine Learning and Mathematical Models (PDEs, ODEs, etc.) to answer questions of a biological nature.</p>
 
-                <h2 />
-                <h2 name="publications">Publications</h2>
-                <p>Below is a list of publications, listed from most recent to least recent. After each publication I try to give an "elevator-pitch" or "highlight reel" summary of the publication in both its context and results. This list was most-recently updated as of December 2018. </p>
-                
                 <hr />
+                <h2 id="publications">Publications</h2>
+                <p>Below is a list of publications, listed from most recent to least recent. After each publication I try to give an "elevator-pitch" or "highlight reel" summary of the publication in both its context and results. This list was most-recently updated as of December 2018. </p>
 
                 <h2>Mutant Stem Cell Fixation (Pre-print)</h2>
                 <p></p>
@@ -63,8 +61,9 @@
                 <p></p>
                 <h2>Spectrally Arbitrary Matrices (LAA)</h2>
                 <p></p>
+                <hr />
 
-                <h2 name="presentations">Presentations</h2>
+                <h2 id="presentations">Presentations</h2>
                 <p>Below is a list of presentations I have given on my research, listed from most recent to least recent. After each listing I try to summarize the context of the presentation in tweet-sized bites. This list was most-recently updated as of December 2018. </p>
                 <h2>Seminar at University of Waterloo</h2>
                 <h2>Redeemer's Mathematical Biology Course, April 2018</h2>
