--- a/map/index.html
+++ b/map/index.html
@@ -1,9 +1,86 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 	<head>
 		<title>KM Map</title>
+        <script type="text/javascript" src="arkenkor.js"></script>
 	</head>
 	<body>
-		KM Map!
+		<img src="arkenkor1.jpg" usemap="#arkenkor-map">
+
+        <map name="arkenkor-map">
+	        <area title="Hex0" id="hex0" coords="4,13,4,216,180,315,355,216,355,13,180,0" shape="poly" />
+	        <area title="Hex1" id="hex1" coords="355,13,355,216,531,315,706,216,706,13,531,0" shape="poly" />
+	        <area title="Hex2" id="hex2" coords="706,13,706,216,882,315,1057,216,1057,13,882,0" shape="poly" />
+	        <area title="Hex3" id="hex3" coords="1057,13,1057,216,1233,315,1408,216,1408,13,1233,0" shape="poly" />
+	        <area title="Hex4" id="hex4" coords="1408,13,1408,216,1584,315,1759,216,1759,13,1584,0" shape="poly" />
+	        <area title="Hex5" id="hex5" coords="1759,13,1759,216,1935,315,2110,216,2110,13,1935,0" shape="poly" />
+	        <area title="Hex6" id="hex6" coords="2110,13,2110,216,2286,315,2461,216,2461,13,2286,0" shape="poly" />
+	        <area title="Hex7" id="hex7" coords="2461,13,2461,216,2550,315,2550,216,2550,13,2550,0" shape="poly" />
+	        <area title="Hex8" id="hex8" coords="0,322,0,525,4,624,179,525,179,322,4,216" shape="poly" />
+	        <area title="Hex9" id="hex9" coords="179,322,179,525,355,624,530,525,530,322,355,216" shape="poly" />
+	        <area title="Hex10" id="hex10" coords="530,322,530,525,706,624,881,525,881,322,706,216" shape="poly" />
+	        <area title="Hex11" id="hex11" coords="881,322,881,525,1057,624,1232,525,1232,322,1057,216" shape="poly" />
+	        <area title="Hex12" id="hex12" coords="1232,322,1232,525,1408,624,1583,525,1583,322,1408,216" shape="poly" />
+	        <area title="Hex13" id="hex13" coords="1583,322,1583,525,1759,624,1934,525,1934,322,1759,216" shape="poly" />
+	        <area title="Hex14" id="hex14" coords="1934,322,1934,525,2110,624,2285,525,2285,322,2110,216" shape="poly" />
+	        <area title="Hex15" id="hex15" coords="2285,322,2285,525,2461,624,2550,525,2550,322,2461,216" shape="poly" />
+	        <area title="Hex16" id="hex16" coords="4,631,4,834,180,933,355,834,355,631,180,525" shape="poly" />
+	        <area title="Hex17" id="hex17" coords="355,631,355,834,531,933,706,834,706,631,531,525" shape="poly" />
+	        <area title="Hex18" id="hex18" coords="706,631,706,834,882,933,1057,834,1057,631,882,525" shape="poly" />
+	        <area title="Hex19" id="hex19" coords="1057,631,1057,834,1233,933,1408,834,1408,631,1233,525" shape="poly" />
+	        <area title="Hex20" id="hex20" coords="1408,631,1408,834,1584,933,1759,834,1759,631,1584,525" shape="poly" />
+	        <area title="Hex21" id="hex21" coords="1759,631,1759,834,1935,933,2110,834,2110,631,1935,525" shape="poly" />
+	        <area title="Hex22" id="hex22" coords="2110,631,2110,834,2286,933,2461,834,2461,631,2286,525" shape="poly" />
+	        <area title="Hex23" id="hex23" coords="2461,631,2461,834,2550,933,2550,834,2550,631,2550,525" shape="poly" />
+	        <area title="Hex24" id="hex24" coords="0,940,0,1143,4,1242,179,1143,179,940,4,834" shape="poly" />
+	        <area title="Hex25" id="hex25" coords="179,940,179,1143,355,1242,530,1143,530,940,355,834" shape="poly" />
+	        <area title="Hex26" id="hex26" coords="530,940,530,1143,706,1242,881,1143,881,940,706,834" shape="poly" />
+	        <area title="Hex27" id="hex27" coords="881,940,881,1143,1057,1242,1232,1143,1232,940,1057,834" shape="poly" />
+	        <area title="Hex28" id="hex28" coords="1232,940,1232,1143,1408,1242,1583,1143,1583,940,1408,834" shape="poly" />
+	        <area title="Hex29" id="hex29" coords="1583,940,1583,1143,1759,1242,1934,1143,1934,940,1759,834" shape="poly" />
+	        <area title="Hex30" id="hex30" coords="1934,940,1934,1143,2110,1242,2285,1143,2285,940,2110,834" shape="poly" />
+	        <area title="Hex31" id="hex31" coords="2285,940,2285,1143,2461,1242,2550,1143,2550,940,2461,834" shape="poly" />
+	        <area title="Hex32" id="hex32" coords="4,1249,4,1452,180,1551,355,1452,355,1249,180,1143" shape="poly" />
+	        <area title="Hex33" id="hex33" coords="355,1249,355,1452,531,1551,706,1452,706,1249,531,1143" shape="poly" />
+	        <area title="Hex34" id="hex34" coords="706,1249,706,1452,882,1551,1057,1452,1057,1249,882,1143" shape="poly" />
+	        <area title="Hex35" id="hex35" coords="1057,1249,1057,1452,1233,1551,1408,1452,1408,1249,1233,1143" shape="poly" />
+	        <area title="Hex36" id="hex36" coords="1408,1249,1408,1452,1584,1551,1759,1452,1759,1249,1584,1143" shape="poly" />
+	        <area title="Hex37" id="hex37" coords="1759,1249,1759,1452,1935,1551,2110,1452,2110,1249,1935,1143" shape="poly" />
+	        <area title="Hex38" id="hex38" coords="2110,1249,2110,1452,2286,1551,2461,1452,2461,1249,2286,1143" shape="poly" />
+	        <area title="Hex39" id="hex39" coords="2461,1249,2461,1452,2550,1551,2550,1452,2550,1249,2550,1143" shape="poly" />
+	        <area title="Hex40" id="hex40" coords="0,1558,0,1761,4,1860,179,1761,179,1558,4,1452" shape="poly" />
+	        <area title="Hex41" id="hex41" coords="179,1558,179,1761,355,1860,530,1761,530,1558,355,1452" shape="poly" />
+	        <area title="Hex42" id="hex42" coords="530,1558,530,1761,706,1860,881,1761,881,1558,706,1452" shape="poly" />
+	        <area title="Hex43" id="hex43" coords="881,1558,881,1761,1057,1860,1232,1761,1232,1558,1057,1452" shape="poly" />
+	        <area title="Hex44" id="hex44" coords="1232,1558,1232,1761,1408,1860,1583,1761,1583,1558,1408,1452" shape="poly" />
+	        <area title="Hex45" id="hex45" coords="1583,1558,1583,1761,1759,1860,1934,1761,1934,1558,1759,1452" shape="poly" />
+	        <area title="Hex46" id="hex46" coords="1934,1558,1934,1761,2110,1860,2285,1761,2285,1558,2110,1452" shape="poly" />
+	        <area title="Hex47" id="hex47" coords="2285,1558,2285,1761,2461,1860,2550,1761,2550,1558,2461,1452" shape="poly" />
+	        <area title="Hex48" id="hex48" coords="4,1867,4,2070,180,2169,355,2070,355,1867,180,1761" shape="poly" />
+	        <area title="Hex49" id="hex49" coords="355,1867,355,2070,531,2169,706,2070,706,1867,531,1761" shape="poly" />
+	        <area title="Hex50" id="hex50" coords="706,1867,706,2070,882,2169,1057,2070,1057,1867,882,1761" shape="poly" />
+	        <area title="Hex51" id="hex51" coords="1057,1867,1057,2070,1233,2169,1408,2070,1408,1867,1233,1761" shape="poly" />
+	        <area title="Hex52" id="hex52" coords="1408,1867,1408,2070,1584,2169,1759,2070,1759,1867,1584,1761" shape="poly" />
+	        <area title="Hex53" id="hex53" coords="1759,1867,1759,2070,1935,2169,2110,2070,2110,1867,1935,1761" shape="poly" />
+	        <area title="Hex54" id="hex54" coords="2110,1867,2110,2070,2286,2169,2461,2070,2461,1867,2286,1761" shape="poly" />
+	        <area title="Hex55" id="hex55" coords="2461,1867,2461,2070,2550,2169,2550,2070,2550,1867,2550,1761" shape="poly" />
+	        <area title="Hex56" id="hex56" coords="0,2176,0,2379,4,2478,179,2379,179,2176,4,2070" shape="poly" />
+	        <area title="Hex57" id="hex57" coords="179,2176,179,2379,355,2478,530,2379,530,2176,355,2070" shape="poly" />
+	        <area title="Hex58" id="hex58" coords="530,2176,530,2379,706,2478,881,2379,881,2176,706,2070" shape="poly" />
+	        <area title="Hex59" id="hex59" coords="881,2176,881,2379,1057,2478,1232,2379,1232,2176,1057,2070" shape="poly" />
+	        <area title="Hex60" id="hex60" coords="1232,2176,1232,2379,1408,2478,1583,2379,1583,2176,1408,2070" shape="poly" />
+	        <area title="Hex61" id="hex61" coords="1583,2176,1583,2379,1759,2478,1934,2379,1934,2176,1759,2070" shape="poly" />
+	        <area title="Hex62" id="hex62" coords="1934,2176,1934,2379,2110,2478,2285,2379,2285,2176,2110,2070" shape="poly" />
+	        <area title="Hex63" id="hex63" coords="2285,2176,2285,2379,2461,2478,2550,2379,2550,2176,2461,2070" shape="poly" />
+        </map>
+
+
+
+        <script type="text/javascript">
+            var data = JSON.parse(arkenkor);
+            for (key in data) {
+                document.getElementById(key).onclick=function(){alert(this.id + " " + data[this.id])};
+            }
+        </script>
 	</body>
 </html>
