--- a/newsite/about.html
+++ b/newsite/about.html
@@ -1,72 +1,103 @@
-<!DOCTYPE html>
-<html>
+<! -- Hi! I handcoded this myself, so if you find any mistakes or areas not following best practices, please let me know! -->
+<!doctype html>
+<html lang="en">
     <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Favicon -->
+        <link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon" />
+        <!-- Font CSS -->
         <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css' />
-        <link rel="stylesheet" href="css/style.css" />
-        <link rel="stylesheet" href="css/main.css" />
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <!-- FontAwesome CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+        <!-- My CSS -->
+        <link rel="stylesheet" href="main.css">
         <title>Brydon Eastman</title>
     </head>
-
     <body>
-        <div id="header">
-        </div>
+        <!-- Navbar Start -->
+        <header>
+            <nav id="navbar" class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark nobg">
+                <div class="container-fluid">
+                    <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="toggler-icon top-bar"></span>
+                    <span class="toggler-icon middle-bar"></span>
+                    <span class="toggler-icon bottom-bar"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="research.html">Research</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="teaching.html">Teaching</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="blog.html">Blog</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="about.html">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact.html">Contact</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="cv.pdf" target="_blank">CV</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <div class="header-bg" style="border-bottom:10px solid black">
+            <div style="font-size:50px;text-align:center;margin-top:75px;margin-left:auto;margin-right:auto;border:1px solid white;width:500px;font-family:serif;padding:25px;">Brydon Eastman</div>
+            </div>
+        </header>
 
-        <div id="ontop">
-            <div id="about" class="wrapper">
-                <img src="images/me.png">
-                <h1>Brydon Eastman</h1>
-                <p>Ph.D. Candidate</p>
-                <p>Department of Applied Math</p>
-                <p>University of Waterloo</p>
+        <div class="container-fluid text-center">
+            <div class="row justify-content-md-center">
+                <div class="col-md-5 text-start">
+                    <h1>About</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin lobortis ipsum nec egestas sagittis. Ut non nibh lectus. Morbi vitae facilisis elit, cursus pharetra leo. In dapibus quis odio in laoreet. Sed sagittis efficitur ultrices. Phasellus eget odio sit amet mi pellentesque sagittis lacinia at leo. Nullam et nibh quis ligula consectetur dictum a sed ipsum. Nullam condimentum a turpis vitae finibus. Donec a turpis dolor. Sed accumsan turpis nulla, vitae molestie leo semper ut. Nullam egestas magna sit amet urna convallis, tempus sollicitudin sapien sagittis. Maecenas id pretium risus. Nam mauris lectus, porttitor quis lectus quis, fermentum tristique enim. Sed ornare, leo sed maximus convallis, sem diam hendrerit risus, sit amet hendrerit tortor dui molestie orci. Praesent rhoncus velit mauris, id ultrices risus efficitur vitae.</p>
+                    
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin lobortis ipsum nec egestas sagittis. Ut non nibh lectus. Morbi vitae facilisis elit, cursus pharetra leo. In dapibus quis odio in laoreet. Sed sagittis efficitur ultrices. Phasellus eget odio sit amet mi pellentesque sagittis lacinia at leo. Nullam et nibh quis ligula consectetur dictum a sed ipsum. Nullam condimentum a turpis vitae finibus. Donec a turpis dolor. Sed accumsan turpis nulla, vitae molestie leo semper ut. Nullam egestas magna sit amet urna convallis, tempus sollicitudin sapien sagittis. Maecenas id pretium risus. Nam mauris lectus, porttitor quis lectus quis, fermentum tristique enim. Sed ornare, leo sed maximus convallis, sem diam hendrerit risus, sit amet hendrerit tortor dui molestie orci. Praesent rhoncus velit mauris, id ultrices risus efficitur vitae.</p>
+                    
+                    <p> Vestibulum malesuada facilisis nunc, ac rutrum lorem faucibus a. Cras nec euismod mauris, quis egestas libero. Nunc non facilisis diam. Interdum et malesuada fames ac ante ipsum primis in faucibus. In hac habitasse platea dictumst. Vestibulum imperdiet tortor ut dui tristique rhoncus. Vestibulum quam risus, congue finibus vestibulum sed, interdum a ipsum. Sed est augue, iaculis sed varius ac, tincidunt quis justo. In pulvinar mattis fringilla. Praesent euismod mauris eu lectus posuere, sit amet volutpat enim luctus.</p>
+                </div>
             </div>
         </div>
 
-            <div id="smnav">
-                <nav>
+        <footer>
+            <div class="container-fluid text-center">
                 <ul>
-                    <li><a class="text" href="index.html" title="Home">Home</a> /</li>
-                    <li><a class="text" href="blog.html" title="Blog">Blog</a> /</li>
-                    <li><a class="text" href="tutorial.html" title="Tutorial">Tutorial</a> /</li>
-                    <li><a class="text" href="teaching.html" title="Teaching">Teaching</a> /</li>
-                    <li><a class="text" href="research.html" title="Research">Research</a> /</li>
-                    <li><a class="text" href="about.html" title="About">About</a></li>
-    				<li><a href="https://www.researchgate.net/profile/Brydon_Eastman/contributions?sorting=recentlyAdded" target="_blank" title="Recent Publications" class="fa fa-university"><span class="label">Recent Papers</span></a></li>
-					<li><a href="mailto:b2eastma@uwaterloo.ca" target="_blank" title="Contact" class="fa fa-envelope"><span class="label">contact</span></a></li>
-					<!--<li><a href="#" target="_blank" title="ResearchGate" class="icon researchGate"><span class="label">ResearchGate</span></a></li>-->
-					<li><a href="https://github.com/brydon" target="_blank" title="GitHub" class="fa fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="https://www.linkedin.com/in/brydon-eastman-396719a4" target="_blank" title="LinkedIn" class="fa fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
-				</ul></nav>
+                    <li><a href="https://www.researchgate.net/profile/Brydon_Eastman/contributions?sorting=recentlyAdded" title="Recent Publications" class="fa fa-university"><span class="label">Recent Papers</span></a></li>
+                    <li><a href="https://scholar.google.ca/citations?user=a1AbiGkAAAAJ&hl=en" title="Google Scholar" class="fa fa-google"><span class="label">Google Scholar</span></a></li>
+                    <li><a href="https://github.com/brydon" title="GitHub" class="fa fa-github"><span class="label">GitHub</span></a></li>
+                    <li><a href="https://www.linkedin.com/in/brydon-eastman-396719a4" title="LinkedIn" class="fa fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
+                    <li><a href="https://www.twitter.com/brhydon" title="Twitter" class="fa fa-twitter-square"><span class="label">Twitter</span></a></li>
+                </ul>
             </div>
+        </footer>
 
-        <div class="wrapper main">
-            <div class="container content">
-                <h2>About Me</h2>
-                <hr />
-                <h2>Education</h2>
-                <p>In 2015 I received a Bachelor of Science degree from Redeemer University with two majors in honours mathematics and four-year computer science. When I was at Redeemer I enjoyed 4 summers of undergraduate student research. Three of them were NSERC USRA funded endeavours, the fourth was funded independently by the professor. The first two summers I worked with Dr. Kevin Vander Meulen. We investigated Linear Algebra and Graph Theory and how the patterns of zero, non-zero, and variable entries in matrices effected the spectrum of eigenvalues. The <a href="research.html" title="Research">research</a> page has a summary of each publication that came out of these summers. The final two summers I worked for Dr. Darren Brouwer, a professor of chemistry at Redeemer. We investigated the link between crystalline zeolite structures and Delaney traingulizations. In particular, this combinatoric tool is capable of recreating all theoretical zeolite crystals achievable by chemists. The second summer we used genetic algorithms to reconstruct atomic positioning of structures via dipole-dipole interactions gathered by nuclear magnetic resonance experiments. </p>
-                <p>In 2017 I received a Master of Science degree from McMaster University for my work in mathematical biology under my supervisor Dr. Gail Wolkowicz. My thesis was entitled</p>
-<blockquote>DEMONSTRATING THE SENSITIVITY OF CHEMOSTAT PREDATOR-PREY SYSTEMS TO THE FUNCTIONAL FORM OF HOLLING TYPE II PREDATOR RESPONSE FUNCTIONS</blockquote>
-<p>A summary of my thesis and a link to the pdf can be found in the <a href="research.html" title="Research">research</a> page of this site.</p>
-                <p>Currently I am a Ph.D candidate at the University of Waterloo in mathematical oncology, a part of the mathematical medicine group, under my supervisor Dr. Mohammad Kohandel. </p>
-
-                <h2>Hobbies</h2>
-                <p>I enjoy anything outdoors-related. Hiking, camping, and scuba diving are fond hobbies of mine. I regularly cycle and try to get out for at least a 20km ride each week. I am an avid reader of science fiction and fantasy and, when I find myself with rare free-time, I enjoy playing (and running) table-top roleplaying games like Pathfinder and Fate.</p>
-
-
-                <h2>Computing</h2>
-                <p>I enjoy writing code. I started writing code when I was 12 years old. At first I learned how to write CSS and HTML solely for the purpose of customising my own, and my friends, MySpace pages. As the years went on I developed numerous websites for local pool companies, scuba diving shops, boat charters, bands, etc.</p>
-                <p>Around this time I started learning Actionscript 2.0 for the purpose of programming Flash applications. This was primarily driven by my desire to create flash video games, but also flash animations and applets for use on the websites I was creating.</p>
-                <p>Somewhere along the way I became interested in more serious programming, and learned how to code in .NET, Perl, PHP, and Python before moving onto University where I learned C, Maple, Matlab, R, Mathematica, and Java.</p>
-                <p>Having spent more than half of my life writing code I am comfortable picking up any object-oriented language with ease. Functional languages, like Mathematica, typically require more serious study before I feel comfortable producing any code of value. </p>
-            </div>
-
-            <div id="footer">
-                <hr />
-                <p>&copy;2018 Brydon Eastman</p>
-            </div>
-        </div>
-
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <script type="text/javascript">
+            window.onload = function() {scrollFunction()};
+            window.onresize = function() {scrollFunction()};
+            window.onscroll = function() {scrollFunction()};
+ 
+            function scrollFunction() {
+                if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                    document.getElementById("navbar").classList.remove('nobg');
+                } else {
+                    document.getElementById("navbar").classList.add('nobg');
+                }
+            }
+        </script>
     </body>
-
 </html>
+
