--- a/newsite/index.html
+++ b/newsite/index.html
@@ -1,60 +1,109 @@
-<!DOCTYPE html>
-<html>
+<! -- Hi! I handcoded this myself, so if you find any mistakes or areas not following best practices, please let me know! -->
+<!doctype html>
+<html lang="en">
     <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Favicon -->
+        <link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon" />
+        <!-- Font CSS -->
         <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css' />
-        <link rel="stylesheet" href="css/style.css" />
-        <link rel="stylesheet" href="css/main.css" />
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <!-- FontAwesome CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+        <!-- My CSS -->
+        <link rel="stylesheet" href="main.css">
         <title>Brydon Eastman</title>
     </head>
-
     <body>
-        <div id="header">
-        </div>
+        <!-- Navbar Start -->
+        <header>
+            <nav id="navbar" class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark nobg">
+                <div class="container-fluid">
+                    <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="toggler-icon top-bar"></span>
+                    <span class="toggler-icon middle-bar"></span>
+                    <span class="toggler-icon bottom-bar"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="research.html">Research</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="teaching.html">Teaching</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="blog.html">Blog</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="about.html">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact.html">Contact</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="cv.pdf" target="_blank">CV</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <div class="header-bg" style="border-bottom:10px solid black">
+            <div style="font-size:50px;text-align:center;margin-top:75px;margin-left:auto;margin-right:auto;border:1px solid white;width:500px;font-family:serif;padding:25px;">Brydon Eastman</div>
+            </div>
+        </header>
 
-        <div id="ontop">
-            <div id="about" class="wrapper">
-                <img src="images/me.png">
-                <h1>Brydon Eastman</h1>
-                <p>Ph.D. Candidate</p>
-                <p>Department of Applied Math</p>
-                <p>University of Waterloo</p>
+        <div class="container-fluid text-center">
+            <div class="row justify-content-md-center">
+                <div class="col-md-5 me">
+                    <a href="mailto:b2eastma@uwaterloo.ca" title="Email Me"><img class="img-profile" src="images/me.jpg" width="300" /></a>
+                    <h3>Brydon Eastman</h3>
+                    <p>Ph.D. Candidate</p>
+                    <p><a href="https://uwaterloo.ca/applied-mathematics/" target="_blank" title="uWaterloo Applied Mathematics">Department of Applied Mathematics</a></p>
+                    <p>University of Waterloo</p>
+                </div>
+                <div class="col-md-5 text-start">
+                    <p>This is the personal website of Brydon Eastman. I am an Applied Mathematician currently pursuing a Ph.D. at the University of Waterloo in the Math Medicine Lab under the supervision of <a href="http://math.uwaterloo.ca/~kohandel/" title="Mohammad Kohandel">Mohammad Kohandel</a>. Previously I obtained an M.Sc. from McMaster University under the supervison of <a href="https://ms.mcmaster.ca/wolkowic/wordpress/" title="Gail Wolkowicz">Gail Wolkowicz</a> and a B.Sc. (Hons) from Redeemer University.</p>
+                    <p>
+                    Broadly, my research interests involve computational biology and general mathematical modelling of biological processes, systems, and phenomena. In particular, I am currently interested in applying machine learning/artificial intellgience technqiues in tandem with differential equations and stochastic models to answer questions of cancer stem cell evolution and treatment response in the study of human cancers. I find biological systems to be fascinating in their complexity and hope to elucidate their behaviour by using stochastic machine learning techniques coupled with traditional models. After all, nature has <a href="https://xkcd.com/1605/" title="Relevant XKCD">no compunction to regulate towards easy description</a> even if it does so in aggregate. 
+                    </p>
+                    <p>Here you will find useful information about me, my research interests, teaching and tutorial resources, and random musings, both mathematical and otherwise, of mine in the blog. Please contact me if you have any questions!</p>
+                </div>
             </div>
         </div>
 
-            <div id="smnav">
-                <nav>
+        <footer>
+            <div class="container-fluid text-center">
                 <ul>
-                    <li><a class="text" href="index.html" title="Home">Home</a> /</li>
-                    <li><a class="text" href="blog.html" title="Blog">Blog</a> /</li>
-                    <li><a class="text" href="tutorial.html" title="Tutorial">Tutorial</a> /</li>
-                    <li><a class="text" href="teaching.html" title="Teaching">Teaching</a> /</li>
-                    <li><a class="text" href="research.html" title="Research">Research</a> /</li>
-                    <li><a class="text" href="about.html" title="About">About</a></li>
-    				<li><a href="https://www.researchgate.net/profile/Brydon_Eastman/contributions?sorting=recentlyAdded" target="_blank" title="Recent Publications" class="fa fa-university"><span class="label">Recent Papers</span></a></li>
-					<li><a href="mailto:b2eastma@uwaterloo.ca" target="_blank" title="Contact" class="fa fa-envelope"><span class="label">contact</span></a></li>
-					<!--<li><a href="#" target="_blank" title="ResearchGate" class="icon researchGate"><span class="label">ResearchGate</span></a></li>-->
-					<li><a href="https://github.com/brydon" target="_blank" title="GitHub" class="fa fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="https://www.linkedin.com/in/brydon-eastman-396719a4" target="_blank" title="LinkedIn" class="fa fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
-				</ul></nav>
+                    <li><a href="https://www.researchgate.net/profile/Brydon_Eastman/contributions?sorting=recentlyAdded" title="Recent Publications" class="fa fa-university"><span class="label">Recent Papers</span></a></li>
+                    <li><a href="https://scholar.google.ca/citations?user=a1AbiGkAAAAJ&hl=en" title="Google Scholar" class="fa fa-google"><span class="label">Google Scholar</span></a></li>
+                    <li><a href="https://github.com/brydon" title="GitHub" class="fa fa-github"><span class="label">GitHub</span></a></li>
+                    <li><a href="https://www.linkedin.com/in/brydon-eastman-396719a4" title="LinkedIn" class="fa fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
+                    <li><a href="https://www.twitter.com/brhydon" title="Twitter" class="fa fa-twitter-square"><span class="label">Twitter</span></a></li>
+                </ul>
             </div>
+        </footer>
 
-        <div class="wrapper main">
-            <div class="container content">
-                <hr />
-                <h2>Welcome</h2>
-                <p>This is the personal website of Brydon Eastman. I am an Applied Mathematician currently pursuing a Ph.D. at the University of Waterloo, previously having obtained an M.Sc. from McMaster University and B.Sc.(Hons) from Redeemer University.</p>
-                <p>Here you will find useful information about me, my research interests, teaching and tutorial resources, and random musings, both mathematical and otherwise, of mine in the blog.</p>
-                <p>Please contact me if you have any questions!</p>
-
-            </div>
-
-            <div id="footer">
-                <hr />
-                <p>&copy;2018 Brydon Eastman</p>
-            </div>
-        </div>
-
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <script type="text/javascript">
+            window.onload = function() {scrollFunction()};
+            window.onresize = function() {scrollFunction()};
+            window.onscroll = function() {scrollFunction()};
+ 
+            function scrollFunction() {
+                if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                    document.getElementById("navbar").classList.remove('nobg');
+                } else {
+                    document.getElementById("navbar").classList.add('nobg');
+                }
+            }
+        </script>
     </body>
-
 </html>
+
