--- a/newsite/teaching.html
+++ b/newsite/teaching.html
@@ -54,8 +54,10 @@
                     </div>
                 </div>
             </nav>
-            <div class="header-bg" style="border-bottom:10px solid black">
-            <div style="font-size:50px;text-align:center;margin-top:75px;margin-left:auto;margin-right:auto;border:1px solid white;width:500px;font-family:serif;padding:25px;">Brydon Eastman</div>
+            <div class="header-bg">
+                <div id="nameplate">
+                    <h1>Brydon Eastman</h1>
+                </div>
             </div>
         </header>
 
