Research Page Update, Colour Correction, Code Page Added

--- a/newsite/code.html
+++ b/newsite/code.html
@@ -33,7 +33,7 @@
                                 <a class="nav-link" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="research.html">Research</a>
+                                <a class="nav-link" href="research.html">Research</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="teaching.html">Teaching</a>
@@ -42,7 +42,7 @@
                                 <a class="nav-link" href="blog.html">Blog</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="code.html">Code</a>
+                                <a class="nav-link active" aria-current="page" href="code.html">Code</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="about.html">About</a>
@@ -66,19 +66,13 @@
 
         <div class="container-fluid text-center">
             <div class="row justify-content-md-center">
-                <div class="col-md-5 me">
-                    <a href="mailto:b2eastma@uwaterloo.ca" title="Email Me"><img class="img-profile" src="images/me.jpg" width="300" alt="Photo of Brydon Eastman" /></a>
-                    <h3>Brydon Eastman</h3>
-                    <p>Ph.D. Candidate</p>
-                    <p><a href="https://uwaterloo.ca/applied-mathematics/" target="_blank" title="uWaterloo Applied Mathematics">Department of Applied Mathematics</a></p>
-                    <p>University of Waterloo</p>
-                </div>
-                <div class="col-md-5 text-start">
-                    <p>This is the personal website of Brydon Eastman. I am an Applied Mathematician currently pursuing a Ph.D. at the University of Waterloo in the Math Medicine Lab under the supervision of <a href="http://math.uwaterloo.ca/~kohandel/" title="Mohammad Kohandel">Mohammad Kohandel</a>. Previously I obtained an M.Sc. from McMaster University under the supervison of <a href="https://ms.mcmaster.ca/wolkowic/wordpress/" title="Gail Wolkowicz">Gail Wolkowicz</a> and a B.Sc. (Hons) from Redeemer University.</p>
-                    <p>
-                    Broadly, my research interests involve computational biology and general mathematical modelling of biological processes, systems, and phenomena. In particular, I am currently interested in applying machine learning/artificial intellgience technqiues in tandem with differential equations and stochastic models to answer questions of cancer stem cell evolution and treatment response in the study of human cancers. I find biological systems to be fascinating in their complexity and hope to elucidate their behaviour by using stochastic machine learning techniques coupled with traditional models. After all, nature has <a href="https://xkcd.com/1605/" title="Relevant XKCD">no compunction to regulate towards easy description</a> even if it does so in aggregate. 
-                    </p>
-                    <p>Here you will find useful information about me, my research interests, teaching and tutorial resources, and random musings, both mathematical and otherwise, of mine in the blog. Please contact me if you have any questions!</p>
+                <div class="col-md-10 text-start">
+                    <h1>Code</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin lobortis ipsum nec egestas sagittis. Ut non nibh lectus. Morbi vitae facilisis elit, cursus pharetra leo. In dapibus quis odio in laoreet. Sed sagittis efficitur ultrices. Phasellus eget odio sit amet mi pellentesque sagittis lacinia at leo. Nullam et nibh quis ligula consectetur dictum a sed ipsum. Nullam condimentum a turpis vitae finibus. Donec a turpis dolor. Sed accumsan turpis nulla, vitae molestie leo semper ut. Nullam egestas magna sit amet urna convallis, tempus sollicitudin sapien sagittis. Maecenas id pretium risus. Nam mauris lectus, porttitor quis lectus quis, fermentum tristique enim. Sed ornare, leo sed maximus convallis, sem diam hendrerit risus, sit amet hendrerit tortor dui molestie orci. Praesent rhoncus velit mauris, id ultrices risus efficitur vitae.</p>
+                    
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin lobortis ipsum nec egestas sagittis. Ut non nibh lectus. Morbi vitae facilisis elit, cursus pharetra leo. In dapibus quis odio in laoreet. Sed sagittis efficitur ultrices. Phasellus eget odio sit amet mi pellentesque sagittis lacinia at leo. Nullam et nibh quis ligula consectetur dictum a sed ipsum. Nullam condimentum a turpis vitae finibus. Donec a turpis dolor. Sed accumsan turpis nulla, vitae molestie leo semper ut. Nullam egestas magna sit amet urna convallis, tempus sollicitudin sapien sagittis. Maecenas id pretium risus. Nam mauris lectus, porttitor quis lectus quis, fermentum tristique enim. Sed ornare, leo sed maximus convallis, sem diam hendrerit risus, sit amet hendrerit tortor dui molestie orci. Praesent rhoncus velit mauris, id ultrices risus efficitur vitae.</p>
+                    
+                    <p> Vestibulum malesuada facilisis nunc, ac rutrum lorem faucibus a. Cras nec euismod mauris, quis egestas libero. Nunc non facilisis diam. Interdum et malesuada fames ac ante ipsum primis in faucibus. In hac habitasse platea dictumst. Vestibulum imperdiet tortor ut dui tristique rhoncus. Vestibulum quam risus, congue finibus vestibulum sed, interdum a ipsum. Sed est augue, iaculis sed varius ac, tincidunt quis justo. In pulvinar mattis fringilla. Praesent euismod mauris eu lectus posuere, sit amet volutpat enim luctus.</p>
                 </div>
             </div>
         </div>
