--- a/newsite/about.html
+++ b/newsite/about.html
@@ -33,7 +33,7 @@
                                 <a class="nav-link" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="research.html">Research</a>
+                                <a class="nav-link active" aria-current="page" href="research.html">Research</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="teaching.html">Teaching</a>
@@ -42,7 +42,10 @@
                                 <a class="nav-link" href="blog.html">Blog</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="about.html">About</a>
+                                <a class="nav-link" href="code.html">Code</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="about.html">About</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contact.html">Contact</a>
@@ -63,7 +66,7 @@
 
         <div class="container-fluid text-center">
             <div class="row justify-content-md-center">
-                <div class="col-md-5 text-start">
+                <div class="col-md-10 text-start">
                     <h1>About</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin lobortis ipsum nec egestas sagittis. Ut non nibh lectus. Morbi vitae facilisis elit, cursus pharetra leo. In dapibus quis odio in laoreet. Sed sagittis efficitur ultrices. Phasellus eget odio sit amet mi pellentesque sagittis lacinia at leo. Nullam et nibh quis ligula consectetur dictum a sed ipsum. Nullam condimentum a turpis vitae finibus. Donec a turpis dolor. Sed accumsan turpis nulla, vitae molestie leo semper ut. Nullam egestas magna sit amet urna convallis, tempus sollicitudin sapien sagittis. Maecenas id pretium risus. Nam mauris lectus, porttitor quis lectus quis, fermentum tristique enim. Sed ornare, leo sed maximus convallis, sem diam hendrerit risus, sit amet hendrerit tortor dui molestie orci. Praesent rhoncus velit mauris, id ultrices risus efficitur vitae.</p>
                     
